Update ViewerPane